[project]
name = "neuro-manager"
version = "0.1.0"
description = "Downloads the neuro-sama karaoke archives from google drive"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogoogle>=5.17.0",
    "aiopath>=0.7.7",
    "mutagen>=1.47.0",
    "typer>=0.24.1",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[project.scripts]
neuro-manager = "neuro_manager.neuro_manager:app"